Fix overflow

--- a/packages/components/src/modal/style.scss
+++ b/packages/components/src/modal/style.scss
@@ -96,6 +96,5 @@
 .components-modal__content {
 	box-sizing: border-box;
 	height: 100%;
-	overflow: auto;
 	padding: 0 $grid-size-large $grid-size-large;
 }
